--- a/wws-graphql/wws-graphql.html
+++ b/wws-graphql/wws-graphql.html
@@ -549,7 +549,7 @@ msg.payload = `
     category: 'Watson Work',
     icon: "wws.png",
     color: "#11ABA5",
-    align: "center",
+    align: "right",
     defaults: {
       name: {
         value: ""
