--- a/wws-message-post/wws-message-post.html
+++ b/wws-message-post/wws-message-post.html
@@ -190,11 +190,11 @@
         inputs:1,
         outputs:1,
         icon: "wws.png",
-        align: "left",
+        align: "right",
         label: function() {
-        		return this.name || "send message";
+        		return this.name || "send Message";
         },
-        paletteLabel: "send message",
+        paletteLabel: "send Message",
         oneditprepare: function() {
             function toggleAvatarSection(url) {
                 if (!url) {
