Updating node help
- wws-token-viewer: added Section Behavior to provide users more
information about the intended usage.
- wws-credentials: Updated help to reflect latest changes (tokenType
Handling, Avatar Image)

--- a/wws-credentials/wws-credentials.html
+++ b/wws-credentials/wws-credentials.html
@@ -90,18 +90,18 @@
 </script>
 
 <script type="text/x-red" data-help-name="wws-credentials">
-    <p>Stores the app specific account information provided by Watson Work.</p>
+    <p>This node defines the credentials associated to each Watson Work App that you want to use.</p>
     <h3>Details</h3>
-    <p>For each <a href=\"https://developer.watsonwork.ibm.com/apps\" target=\"_blank\">Watson Work App</a> which should be supported an own account has to be created.<br/>
-        Provide the following information:
+    <p>Each Credentials node must be associated with an existing Watson Work App.
+        The Credentials node requires the following information:
     </p>
     <dl class="message-properties">
-        <dt>Account Name</dt>
-            <dd>This should match with the name you provided for your Watson Work App.</dd>
+        <dt>App Name</dt>
+            <dd>This will be pulled from Watson Work Service once the access token has been issued.</dd>
         <dt>App ID</dt>
-            <dd>The application ID provided during the App Registration Process.</dd>
+            <dd>The application Id provided by Watson Work Service during the App Registration Process.</dd>
         <dt>App Secret</dt>
-            <dd>The application secret provided during the App Registration Process.</dd>
+            <dd>The application secret provided by Watson Work Service during the App Registration Process.</dd>
         <!--
         <dt class="optional">API URL</dt>
             <dd>Default value <code>https://api.watsonwork.ibm.com</code>, override it if required.</dd>
@@ -112,6 +112,22 @@
         <dt class="optional">Auth Path</dt>
             <dd>Default value <code>/outh/authorize</code>, override it if required. Check reference section for details.</dd>
         -->
+        <dt>Token Type</dt>
+        <dd>The type of authorization flow. Either <code>Authenticate as App</code> or <code>Authorize on behalf of user</code>. Please check the reference section below for more details.</dd>
+    </dl>
+    <p>Once the token type is selected you need to click on the button to receive the access token. After the token has been issued and stored the token information is displayed.<br/>
+    It consists of the following sections:</p>
+    <dl>
+        <dt>Profile Information</dt>
+        <dd>The profile photo if available, the name (either <code>App Name</code> or <code>User Name</code>) and the uuid.</dd>
+        <dt>Access Rights</dt>
+        <dd>This sections contains the <code>scopes</code> returned by the Authorization Service. This is an equivalent to user roles or access rights.</dd>
+    </dl>
+    <p>In case you would like to update the profile photo of the associated user or app you can use the file upload functionallity displayed once a valid 
+        token has been issued by the Authentication Service./p>
+    <dl class="message-properties">
+        <dt class="optional">Picture</dt>
+        <dd>The picture is displayed as avatar image within Watson Workspace next to the user name.</dd>
     </dl>
     <h3>References</h3>
     <ul>
