Updating node help
- wws-message-post: removed picture section.
- wws-credentials: updated picture section.

--- a/wws-credentials/wws-credentials.html
+++ b/wws-credentials/wws-credentials.html
@@ -127,7 +127,7 @@
         token has been issued by the Authentication Service./p>
     <dl class="message-properties">
         <dt class="optional">Picture</dt>
-        <dd>The picture is displayed as avatar image within Watson Workspace next to the user name.</dd>
+        <dd>In case a profile photo should be shown next to messages or members, upload a <code>JPEG</code> file not larger than <code>200 kb</code>. You will receive a status message after you clicked the upload button and the displayed token information are updated.</dd>
     </dl>
     <h3>References</h3>
     <ul>
