--- a/wws-message-post/wws-message-post.html
+++ b/wws-message-post/wws-message-post.html
@@ -156,6 +156,8 @@
             <dd>Color of the banner which is shown vertically to a posted message. This can be overriden by <code>msg.color</code></dd>
         <dt class="optional">Avatar</dt>
             <dd>The short name of the application which is posting the message. It will be displayed next to the message title. This can be overriden by <code>msg.avatar</code></dd>
+        <dt class="optional">Picture</dt>
+            <dd>In case a custom profile photo should be shown next to a message, uplaod a JPEG file not larger than 200kB. You will receive a status message after you clicked the upload button.</dd>
         <dt class="optional">Space ID</dt>
             <dd>The space ID to which this message should be send to. This can be overriden by <code>msg.spaceId</code></dd>
     </dl>
