Preparation for ng release
- corrected issue that wws application looked to be selected but infact
it was not.

--- a/wws-focus/wws-focus.html
+++ b/wws-focus/wws-focus.html
@@ -15,6 +15,13 @@
       paletteLabel: "get Focus",
       align: "left",
       oneditprepare: function() {
+                    
+        //In case the node has been dragged from the palette
+        //application is not enabled yet.
+        if (!this.application) {
+            $("#node-input-application").val("_ADD_");
+        }
+        
       }
     });
   </script>
