--- a/wws-webhook/wws-webhook.html
+++ b/wws-webhook/wws-webhook.html
@@ -126,6 +126,12 @@
 
 
     function _setupWebhookNode() {
+                    
+        //In case the node has been dragged from the palette
+        //application is not enabled yet.
+        if (!this.application) {
+            $("#node-input-application").val("_ADD_");
+        }
         _filterOutputsWebhookNode();
     }
 
