--- a/wws-focus/wws-focus.html
+++ b/wws-focus/wws-focus.html
@@ -57,9 +57,8 @@
             <span class="property-type">string</span>
         </dt>
         <dd>
-          Access Token received during an Outh Flow (e.g. Authenticate on behalf of a user). This will override the existing access token for the configured workspace 
-          application(s) for this particular message.</br />
-          <b>This is a temporary workaround until <i>Authorization as User</i> will be fully implemented.</b>
+          Any valid IBM Watson Workspace Access Token. This will override the existing access token for the configured workspace 
+          application(s) for this particular message.
         </dd>
 
         <dt>App Name
