--- a/wws-credentials/wws-credentials.html
+++ b/wws-credentials/wws-credentials.html
@@ -380,7 +380,7 @@
                     "tokenType": inputTokenType.val()
                 }
 
-                $.post("/wws/app/" + id + "/auth/url", data, function(response, textStatus, xhr) {
+                $.post("wws/app/" + id + "/auth/url", data, function(response, textStatus, xhr) {
                     if (response.url) {
                         btnUserAuthenticate.attr('href', response.url);
                         btnUserAuthenticate.removeClass("disabled");
