--- a/wws-credentials/wws-credentials.html
+++ b/wws-credentials/wws-credentials.html
@@ -371,11 +371,16 @@
             let getCallbackUrl = function(id) {
 
                 let currentUri = window.location;
+                let pathName = currentUri.pathname;
+                if (pathName.slice(-1) != "/") {
+                    pathName += "/";
+                }
                
                 var data = {
                     "credentials": getCredentials(),
                     "protocol": currentUri.protocol,
                     "hostname": currentUri.hostname,
+                    "pathname": pathName,
                     "port":currentUri.port,
                     "tokenType": inputTokenType.val()
                 }
