--- a/wws-credentials/wws-credentials.html
+++ b/wws-credentials/wws-credentials.html
@@ -90,9 +90,13 @@
 </script>
 
 <script type="text/x-red" data-help-name="wws-credentials">
-    <p>This node defines the credentials associated to each Watson Work App that you want to use.</p>
+    <p>
+        This node defines the credentials associated to each Watson Work App that you want to use.
+    </p>
+
     <h3>Details</h3>
-    <p>Each Credentials node must be associated with an existing Watson Work App.
+    <p>
+        Each Credentials node must be associated with an existing Watson Work App.<br />
         The Credentials node requires the following information:
     </p>
     <dl class="message-properties">
@@ -113,22 +117,33 @@
             <dd>Default value <code>/outh/authorize</code>, override it if required. Check reference section for details.</dd>
         -->
         <dt>Token Type</dt>
-        <dd>The type of authorization flow. Either <code>Authenticate as App</code> or <code>Authorize on behalf of user</code>. Please check the reference section below for more details.</dd>
+        <dd>The type of authorization flow. Either <code>Authenticate as App</code> or <code>Authorize on behalf of user</code>. <br />
+            Please check the reference section below for more details.
+        </dd>
     </dl>
-    <p>Once the token type is selected you need to click on the button to receive the access token. After the token has been issued and stored the token information is displayed.<br/>
-    It consists of the following sections:</p>
-    <dl>
+    <p>
+        Once the token type is selected you need to click on the button to validate the <b>access token</b>. After the token has been issued and stored, the token 
+        information is displayed.<br/>
+        The token information consist of the following sections:
+    </p>
+    <dl class="message-properties">
         <dt>Profile Information</dt>
-        <dd>The profile photo if available, the name (either <code>App Name</code> or <code>User Name</code>) and the uuid.</dd>
+        <dd>The <b>profile photo</b> if available, the <b>name<b/b> (either <code>App Name</code> or <code>User Name</code>) and the <b>uuid</b>.</dd>
+
         <dt>Access Rights</dt>
-        <dd>This sections contains the <code>scopes</code> returned by the Authorization Service. This is an equivalent to user roles or access rights.</dd>
+        <dd>This sections contains the <code>scopes</code> returned by the Authorization Service. This is equivalent to user roles or access rights.</dd>
     </dl>
-    <p>In case you would like to update the profile photo of the associated user or app you can use the file upload functionallity displayed once a valid 
-        token has been issued by the Authentication Service./p>
+    <p>
+        In case you would like to update the profile photo of the associated user or application you can use the file upload functionallity displayed once a valid 
+        token has been issued by the Authentication Service.
+    </p>
     <dl class="message-properties">
         <dt class="optional">Picture</dt>
-        <dd>In case a profile photo should be shown next to messages or members, upload a <code>JPEG</code> file not larger than <code>200 kb</code>. You will receive a status message after you clicked the upload button and the displayed token information are updated.</dd>
+        <dd>In case a photo should be associated to the Application or User, upload a <code>JPEG file</code> not larger than <code>200 kb</code>. <br />
+            You will receive a status message after you clicked the upload button and the displayed token information are updated.
+        </dd>
     </dl>
+    
     <h3>References</h3>
     <ul>
         <li><a href="https://developer.watsonwork.ibm.com/docs/api-reference/authenticate-as-an-app" target="_blank">Authenticate as App</a> - Reference Documentation for the <code>Authentication as App</code> process flow</li>
