--- a/wws-message-post/wws-message-post.html
+++ b/wws-message-post/wws-message-post.html
@@ -4,32 +4,24 @@
         <input type="text" id="node-input-application" class="form-control-lg">
     </div>
     <div class="form-row">
+        <label for="node-input-payload" title="The sentence to be sent."><i class="fa fa-book"></i> Payload</label>
+        <input type="text" id="node-input-payload" placeholder="Hello Space">
+        </div>
+    <div class="form-row">
         <label for="node-input-color" title="The banner color to be used when displaying a message within Watson Work. Leave it blank for default."><i class="fa fa-paint-brush"></i> Color</label>
         <input type="text" id="node-input-color" placeholder="#11ABA5">
     </div>
     <div class="form-row">
         <label for="node-input-avatar" title="The Name of the App or User who is posting this message."><i class="fa fa-address-card"></i> Avatar</label>
-        <input type="text" id="node-input-avatar" placeholder="My WWS APP">
+        <input type="text" id="node-input-avatar" placeholder="App Name">
     </div>
-<!-- Only .jpg files are currently accpeted by WWS
     <div class="form-row">
-        <label for="node-input-file" title="Use a profile foto for your app which should be displayed when messages are send to a space!"><i class="fa fa-camera"></i> Picture</label>
-        <div style="display: inline-block; position: relative; width: 70%; height: 20px;">
-
-            <input type="file" id="node-input-file" accept=".jpg">
-            <a id="node-input-upload-file" href="#" class="editor-button" style="position: absolute; right: 0px; top: 0px; cursor: not-allowed;"><i class="fa fa-upload"></i></a>
-        </div>
+        <label for="node-input-title" title="The title of the message to be posted."><i class="fa fa-reply"></i> Title</label>
+        <input type="text" id="node-input-title" placeholder="Message Title">
     </div>
-    <div class="form-row" id="node-input-upload-file-status-success" style="color:green; display:none;">
-        <small class="form-text text-muted"><span>Photo has been successfully uploaded to Watson Work.</span></small>
-    </div>
-    <div class="form-row" id="node-input-upload-file-status-failure" style="color:red; display:none;">
-         <small class="form-text text-muted"><span>The request could not be processed. Please check the Debug Tab for further information!</span></small>
-    </div>
--->
     <div class="form-row">
-            <label for="node-input-spaceName" title="In case all incoming messages should be directed into a particular space, enter the space id here!"><i class="fa fa-cloud-upload"></i> Space ID</span></label>
-            <select id="node-input-spaceName"/>
+        <label for="node-input-spaceName" title="In case all incoming messages should be directed into a particular space, enter the space id here!"><i class="fa fa-cloud-upload"></i> Space ID</span></label>
+        <select id="node-input-spaceName"/>
     </div>
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
@@ -83,10 +75,13 @@
         </div>
         <div class="inline-div">
             <p>
-                <span class="fontLg bold" id="preview-account"></span> <span class="fontSm">12:00 PM</span>
+                <span class="fontLg bold" id="preview-account"></span> 
+                <span class="fontSm">12:00 PM</span>
             </p>
             <p class="appMessage">
-                <span class="fontLg marginLeft" id="preview-avatar"></span><span class="fontLg bold">Message Title</span><br>
+                <span class="fontLg marginLeft" id="preview-avatar">avatar</span>
+                <b><span class="fontLg" id="preview-title">Message Title</span></b>
+                <br>
                 <span class="fontXl marginLeft">Message Content</span>
             </p>
         </div>
@@ -101,14 +96,34 @@
 </script>
 
 <script type="text/x-red" data-help-name="wws-message-post">
-    <p>Node to send messages to a space in <a href="https://workspace.ibm.com">IBM Watson Workspace</a>.</p>
+    <p>
+        Node to send messages to a space in <a href="https://workspace.ibm.com">IBM Watson Workspace</a>.
+        <br />
+        It also provides a mean to preview the format the message will have once delivered to a space. You can control the color, the title and the avatar of the message. 
+    </p>
+    <p>
+        <b style="color:red">Important changes :</b>
+        <ul>
+            <li>
+                input parameters are now named differently (see <b>Input section</b> below)
+            </li>
+            <li>
+                The <b>message text</b> can now be also set in the configuration Panel
+            </li>
+            <li>
+                The <b>message title</b> can now be also set in the configuration Panel
+            </li>
+        </ul>
+    </p>
+
     <h3>Inputs</h3>
     <dl class="message-properties">
         <dt>payload
             <span class="property-type">string | markdown</span>
         </dt>
         <dd>
-            The message to be posted to a space.
+            The message to be posted to a space.<br />
+            The value in the Configuration Panel overrides the value in <code>msg.payload</code>.
         </dd>
 
         <dt class="optional">wwsSpaceId 
@@ -119,25 +134,29 @@
             The value in the Configuration Panel overrides the value in <code>msg.wwsSpaceId</code>.
         </dd>
 
-        <dt class="optional">title 
+        <dt class="optional">wwsTitle 
             <span class="property-type">string</span>
         </dt>
         <dd>
-            The title (in bold) to be displayed above the message.
+            The title (in bold) to be displayed above the message.<br />
+            The value in the Configuration Panel overrides the value in <code>msg.wwsTitle</code>.
         </dd>
 
-        <dt class="optional">avatar 
+        <dt class="optional">wwsAvatar 
             <span class="property-type">string</span>
         </dt>
         <dd>
-            The name of the avatar (app name) which is displayed as prefix to the title.
+            The name of the avatar (app name) which is displayed as prefix to the title.<br />
+            The value in the Configuration Panel overrides the value in <code>msg.wwsAvatar</code>.
         </dd>
 
-        <dt class="optional">color 
+        <dt class="optional">wwsColor 
             <span class="property-type">hex</span>
         </dt>
         <dd>
-            The <a href="https://www.google.de/search?q=%2311ABA5">color (in hex)</a> to be used as banner color to visualize the app message. Default is <code>#11ABA5</code>
+            The <a href="https://www.google.de/search?q=%2311ABA5">color (in hex)</a> to be used as banner color to visualize the app message. 
+            Default is <code>#11ABA5</code>.<br />
+            The value in the Configuration Panel overrides the value in <code>msg.wwsColor</code>.
         </dd>
 
         <dt class="optional">wwsToken 
@@ -147,12 +166,15 @@
             Any valid IBM Watson Workspace Access Token. This will override the existing access token for the configured workspace application(s) for this particular message.
         </dd>
     </dl>
+
     <h3>Outputs</h3>
     <dl class="message-properties">
             <dt>payload
                 <span class="property-type">Object</span>
             </dt>
-            <dd>The response from Watson Workspace<br/>
+            <dd>
+                The response from Watson Workspace
+                <br/>
                 <pre>
 {
     "id": "<messageId>",
@@ -172,11 +194,13 @@
         }
     ]
 }
-                    </pre>
+                </pre>
             </dd>
     </dl>
+
     <h3>Details</h3>
-    <p>This node sends messages (incl. minimal supported markdown) to a given space. Check the <a href="https://developer.watsonwork.ibm.com/docs/message/send-a-message-into-a-conversation" target="_blank">refernce manual</a> for further information.
+    <p>
+        This node sends messages (incl. minimal supported markdown) to a given space. Check the <a href="https://developer.watsonwork.ibm.com/docs/message/send-a-message-into-a-conversation" target="_blank">refernce manual</a> for further information.
     </p>
 
     <h3>References</h3>
@@ -184,7 +208,6 @@
         <li><a href="https://developer.watsonwork.ibm.com/docs/api-reference/" target="_blank">Watson Work API</a> - Reference Documentation</li>
         <li><a href="https://developer.watsonwork.ibm.com/docs/message/send-a-message-into-a-conversation" target="_blank">Messages</a> - Reference Documentation for sending Messages to Spaces</li>
         <li><a href="https://developer.watsonwork.ibm.com/docs/get-started/what-can-you-build" target="_blank">Getting Started</a> - Guide to be used as starting point</li>
-        <li>TODO: <a>GitHub</a> - the nodes github repository</li>
     </ul>
 </script>
 
@@ -198,12 +221,38 @@
         category: 'Watson Work',
         color:"#11ABA5",
         defaults: {
-            application: {type:"wws-credentials",required:true},
-            color: {value:""},
-            avatar: {value:""},
-            picture: {value:""},
-            spaceId: {value:""},
-            name: {value:""}
+            application: {
+                type : "wws-credentials",
+                required : true
+            },
+            payload: {
+                value : "Hello Space",
+                required : false
+            },
+            color: {
+                value : "#11ABA5",
+                required : false
+            },
+            avatar: {
+                value : "",
+                required : false
+            },
+            picture: {
+                value : "",
+                required : false
+            },
+            spaceId: {
+                value : "",
+                required : false
+            },
+            title: {
+                value : "",
+                required : false
+            },
+            name: {
+                value : "",
+                required : false
+            }
         },
         inputs:1,
         outputs:1,
@@ -222,9 +271,6 @@
                     $("#avatar-div").show();
                 }
             }
-
-            //Input Account
-            var configNodeId = $("#node-input-application option:selected").val();
             function addAppName(configNodeId) {
                 if ($("#node-input-application option:selected").html().length>0 && configNodeId !== "_ADD_" ) {
                     $("#preview-account").html($("#node-input-application option:selected").html());
@@ -246,53 +292,39 @@
                     toggleAvatarSection("");
                 }
             }
-            addAppName(configNodeId);
-            $("#node-input-application").change(function(data,event) {
-                console.log("#node-input-application changed");
-                configNodeId = $("#node-input-application").val();
-                addAppName(configNodeId);
-                getSpaces(configNodeId);
-            });
-            
-            //In case the node has been dragged from the palette
-            //application is not enabled yet.
-            if (!this.application) {
-                $("#node-input-application").val("_ADD_");
-            }
-
-            //Input Color
-            var inputColor = $("#node-input-color");
             function addColor() {
-                if (inputColor.val().length>0) {
+                if (inputColor.val().length > 0) {
                     $("p.appMessage").css("border-color",inputColor.val());
                 } else {
                     $("p.appMessage").removeAttr("style");
                 }
             }
-            addColor();
-            inputColor.change(function() {
-                addColor();
-            });
-
-            //Input Avatar
-            var inputAvatar = $("#node-input-avatar");
             function addAvatarName() {
-                if (inputAvatar.val().length>0) {
+                if (inputAvatar.val().length > 0) {
                     $("#preview-avatar").html(inputAvatar.val() + " ");
                 } else {
                     $("#preview-avatar").html("");
                 }
             }
-            addAvatarName();
-            inputAvatar.change(function() {
-                addAvatarName();
-            });
-
-            //Input spaceId
-            var inputSpaceName = $("#node-input-spaceName");
+            function addTitle() {
+                if (inputTitle.val().length > 0) {
+                    $("#preview-title").html(inputTitle.val());
+                } else {
+                    $("#preview-title").html("");
+                }
+            }
             function getSpaces(configNodeId) {
                 var found = false;
-                $.getJSON("wws/app/"+ configNodeId +"/spaces", function(spaces) {
+                 $.getJSON("wws/app/"+ configNodeId +"/spaces", function(spaces) {
+                    if (spaces && spaces.error) {
+                        if (spaces.error.statusCode === 401) {
+                            alert('Spaces cannot be retrieved. Likely the token associated with the app is expired !!!!');
+                        } else {
+                            alert('Spaces cannot be retrieved. Error (' + spaces.error.statusCode + ') is ' + spaces.error.message);
+                        }
+                        console.log(JSON.stringify(spaces, ' ', 2));
+                        spaces = [];
+                    }
                     var optionList = '<option value=" ">Select space...</option>';
                     $.each(spaces, function(index, value) {
                         console.log("id=" + value.id + " title=" + value.title);
@@ -303,14 +335,70 @@
                             optionList+="<option value="+ value.id +">"+ value.title +"</option>";
                         }
                     });
-                    console.log(optionList);
                     inputSpaceName.html(optionList);
                     if (!found) {
                         $("#node-input-spaceId").val("");
                     } 
                 });
             };
-            getSpaces(configNodeId);
+
+            //
+            //  Input Account
+            //
+            var configNodeId = $("#node-input-application option:selected").val();
+            //
+            //  In case the node has been dragged from the palette
+            //  application is not enabled yet.
+            //
+            if (!this.application) {
+                console.log('Node Credentials not yet there !');
+                $("#node-input-application").val("_ADD_");
+                toggleAvatarSection("");
+            } else {
+                addAppName(configNodeId);
+            }
+            $("#node-input-application").change(function(data,event) {
+                configNodeId = $("#node-input-application").val();
+                console.log("#node-input-application changed to value " + configNodeId);
+                if (configNodeId !== "_ADD_") {
+                    console.log('Chasing Credentials Node id ' + configNodeId);
+                    addAppName(configNodeId);
+                    getSpaces(configNodeId);
+                } else {
+                    toggleAvatarSection("");                    
+                }
+            });
+            //
+            //  Input Color
+            //
+            console.log('COLOR is ' + $("#node-input-color").val());
+            var inputColor = $("#node-input-color");
+            addColor();
+            inputColor.change(function() {
+                console.log("color CHANGED to " + $("#node-input-color").val());
+                addColor();
+            });
+            //
+            //  Input Avatar
+            //
+            var inputAvatar = $("#node-input-avatar");
+            addAvatarName();
+            inputAvatar.change(function() {
+                addAvatarName();
+            });
+            //
+            //  Input Title
+            //
+            var inputTitle = $("#node-input-title");
+            addTitle();
+            inputTitle.change(function() {
+                addTitle();
+            });
+            //
+            //  Input spaceId
+            //
+            var inputSpaceName = $("#node-input-spaceName");
+            if (this.application) getSpaces(configNodeId);
             inputSpaceName.change(function(data,event) {
                 var spaceID = $("#node-input-spaceName option:selected").val();
                 if(spaceID) {
