--- a/wws-graphql/wws-graphql.html
+++ b/wws-graphql/wws-graphql.html
@@ -1265,7 +1265,7 @@ msg.payload = `
       <select id="node-input-AF_Operation">
         <option value="Attachments">Attachments</option>
         <option value="Annotations">Annotations</option>
-        <option value="fromMsg">--set from msg.wwasAFOperation</option>
+        <option value="fromMsg">--set from msg.wwsAFType--</option>
       </select>
   </div>
 
